--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Simsip</title>
+    <title>Bill McRoberts</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -16,8 +16,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Simsip</h1>
-        <p class="header"></p>
+        <h1 class="header">Bill McRoberts</h1>
+        <p class="header">bill.mcroberts@outlook.com</p>
 
 
 
