--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <h1 class="header">Bill McRoberts</h1>
-        <a href="mailto:bill.mcroberts@outlook.com">
+        <a href="mailto:bill.mcroberts@outlook.com">bill.mcroberts@outlook.com</a>
 
 
 
