--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,8 +20,8 @@
         <a href="mailto:bill.mcroberts@outlook.com">bill.mcroberts@outlook.com</a>
 
         <ul>
-		  <li><a class="buttons github" href="http://simsip-admin.github.io/">GitHub Page</a></li>
-          <li><a class="buttons github" href="https://github.com/simsip-admin">GitHub Profile</a></li>
+          <li><a class="buttons github" href="https://github.com/simsip-admin/InApp/">View on GitHub</a></li>
+		  <li><a class="buttons github" href="http://simsip-admin.github.io/">Projects</a></li>
         </ul>
 
       </header>
